objects/Course_Rate__c/Course_Rate__c.object-meta.xml
<CustomObject>
    <label>Course Rate</label>
    <nameField>
        <label>Course Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>