objects/Course_Rate__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Course Rates</relationshipLabel>
    <relationshipName>Course_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>