objects/Course_Rate__c/listViews/CourseRatesView.listView-meta.xml
<ListView>
    <fullName>CourseRatesView</fullName>
    <columns>NAME</columns>
    <columns>Instructor__c</columns>
    <columns>Course__c</columns>
    <columns>Hourly_Rate__c</columns>
    <filterScope>Mine</filterScope>
    <label>CourseRatesView</label>
</ListView>